--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,7 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -19,11 +26,72 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
-  box-sizing: border-box;
 }
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+}
+
+/* Solution */
+
+a {
+  text-decoration: none;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+}
+
+.header {
+  font-size: 32px;
+  font-weight: 900;
+
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+.sidebar ul li {
+  margin-bottom: 16px;
+}
+
+.sidebar a {
+  color: white;
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.section {
+  padding: 48px;
+  display: flex;
+  flex-wrap: wrap;
+
+  gap: 62px;
+}
+
+.card {
+  flex-basis: 300px;
+  padding: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
